tests/ui/g-typelist-local-label-mismatch.stderr
error[E0107]: function takes 4 generic arguments but 3 generic arguments were supplied
 --> tests/ui/g-typelist-local-label-mismatch.rs:8:45
  |
8 | const PROGRAM: g::Program<GlobalSteps> = g::send::<Client, Server, g::Msg<7, u16>>();
  |                                             ^^^^   ------  ------  -------------- supplied 3 generic arguments
  |                                             |
  |                                             expected 4 generic arguments
  |
note: function defined here, with 4 generic parameters: `From`, `To`, `M`, `LANE`
 --> src/global.rs
  |
  | pub const fn send<From, To, M, const LANE: u8>() -> Program<StepCons<SendStep<From, To, M, LANE>, StepNil>>
  |              ^^^^ ----  --  -  --------------
help: add missing generic argument
  |
8 | const PROGRAM: g::Program<GlobalSteps> = g::send::<Client, Server, g::Msg<7, u16>, LANE>();
  |                                                                                  ++++++

error[E0308]: mismatched types
  --> tests/ui/g-typelist-local-label-mismatch.rs:13:56
   |
13 | const CLIENT: g::RoleProgram<'static, 0, WrongLocal> = g::project::<0, GlobalSteps, _>(&PROGRAM);
   |                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `8`, found `7`
   |
   = note: expected struct `RoleProgram<'static, 0, StepCons<LocalSend<Role<1>, Message<LabelMarker<8>, u16>>, StepNil>, MintConfig<NullMintSpec, CanonicalPolicy>>`
              found struct `RoleProgram<'static, 0, StepCons<LocalSend<Role<1>, Message<LabelMarker<7>, u16>>, StepNil>, _>`
